--- a/readme
+++ b/readme
@@ -1,3 +1,8 @@
+使用eureka集群需要配置host映射
+127.0.0.1 eureka00.cn
+127.0.0.1 eureka01.cn
+127.0.0.1 eureka03.cn
+
 eureka-url
 http://eureka00.cn:3000/
 http://eureka01.cn:3001/
